Use env secrets for ansible

--- a/software/roles/docker_compose_apps/templates/authelia/.env.j2
+++ b/software/roles/docker_compose_apps/templates/authelia/.env.j2
@@ -1,6 +1,6 @@
 BASE_DOMAIN={{ base_domain }}
-JWT_SECRET={{ lookup('ansible.builtin.env', 'AUTHELIA_JWT_SECRET') }}
-SESSION_SECRET={{ lookup('ansible.builtin.env', 'AUTHELIA_SESSION_SECRET') }}
-POSTGRES_PASSWORD={{ lookup('ansible.builtin.env', 'AUTHELIA_POSTGRES_PASSWORD') }}
-STORAGE_ENCRYPTION_KEY={{ lookup('ansible.builtin.env', 'AUTHELIA_STORAGE_ENCRYPTION_KEY') }}
-LDAP_PASSWORD={{ lookup('ansible.builtin.env', 'AUTHELIA_LDAP_PASSWORD') }}
+AUTHELIA_JWT_SECRET={{ AUTHELIA_JWT_SECRET }}
+AUTHELIA_SESSION_SECRET={{ AUTHELIA_SESSION_SECRET }}
+AUTHELIA_POSTGRES_PASSWORD={{ AUTHELIA_POSTGRES_PASSWORD }}
+AUTHELIA_STORAGE_ENCRYPTION_KEY={{ AUTHELIA_STORAGE_ENCRYPTION_KEY }}
+AUTHELIA_LDAP_PASSWORD={{ AUTHELIA_LDAP_PASSWORD }}
