--- a/software/roles/docker_compose_apps/templates/lldap/.env.j2
+++ b/software/roles/docker_compose_apps/templates/lldap/.env.j2
@@ -1,3 +1,3 @@
 BASE_DOMAIN={{ base_domain }}
-ADMIN_PASSWORD={{ lookup('ansible.builtin.env', 'LLDAP_ADMIN_PASSWORD') }}
-JWT_SECRET={{ lookup('ansible.builtin.env', 'LLDAP_JWT_SECRET') }}
+LLDAP_ADMIN_PASSWORD={{ LLDAP_ADMIN_PASSWORD }}
+LLDAP_JWT_SECRET={{ LLDAP_JWT_SECRET }}
