--- a/software/roles/docker_compose_apps/templates/authelia/docker-compose.yml.j2
+++ b/software/roles/docker_compose_apps/templates/authelia/docker-compose.yml.j2
@@ -10,6 +10,9 @@ services:
       AUTHELIA_STORAGE_POSTGRES_PASSWORD: ${AUTHELIA_POSTGRES_PASSWORD}
       AUTHELIA_STORAGE_ENCRYPTION_KEY: ${AUTHELIA_STORAGE_ENCRYPTION_KEY}
       AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD: ${AUTHELIA_LDAP_PASSWORD}
+{% if AUTHELIA_NOTIFIER_SMTP_PASSWORD %}
+      AUTHELIA_NOTIFIER_SMTP_PASSWORD: ${AUTHELIA_NOTIFIER_SMTP_PASSWORD}
+{% endif %}
     volumes:
       - ./config:/config:ro
     tmpfs:
