--- a/software/roles/docker_compose_apps/templates/authelia/.env.j2
+++ b/software/roles/docker_compose_apps/templates/authelia/.env.j2
@@ -1,9 +1,9 @@
 BASE_DOMAIN={{ base_domain }}
 AUTHELIA_JWT_SECRET={{ AUTHELIA_JWT_SECRET }}
 AUTHELIA_SESSION_SECRET={{ AUTHELIA_SESSION_SECRET }}
-AUTHELIA_POSTGRES_PASSWORD={{ AUTHELIA_POSTGRES_PASSWORD }}
+AUTHELIA_STORAGE_POSTGRES_PASSWORD={{ AUTHELIA_POSTGRES_PASSWORD }}
 AUTHELIA_STORAGE_ENCRYPTION_KEY={{ AUTHELIA_STORAGE_ENCRYPTION_KEY }}
-AUTHELIA_LDAP_PASSWORD={{ AUTHELIA_LDAP_PASSWORD }}
+AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD={{ AUTHELIA_LDAP_PASSWORD }}
 {% if AUTHELIA_NOTIFIER_SMTP_PASSWORD %}
 AUTHELIA_NOTIFIER_SMTP_PASSWORD={{ AUTHELIA_NOTIFIER_SMTP_PASSWORD }}
 {% endif %}
