Expose traefik dashboard

--- a/software/roles/docker_compose_apps/templates/authelia/config/configuration.yml.j2
+++ b/software/roles/docker_compose_apps/templates/authelia/config/configuration.yml.j2
@@ -22,6 +22,8 @@ access_control:
       policy: one_factor
     - domain: grocy.{{ base_domain }}
       policy: one_factor
+    - domain: traefik.{{ base_domain }}
+      policy: one_factor
     - domain: grafana.{{ base_domain }}
       policy: one_factor
 
